group_post icon ie fix

--- a/app/stylesheets/ie.sass
+++ b/app/stylesheets/ie.sass
@@ -9,5 +9,7 @@ body.ie
         background-image: url("/images/icons/new-event.png")
       &.announcement, &.announcement:hover, &.announcement.current
         background-image: url("/images/icons/new-announcement.png")
+      &.group_post, &.group_post:hover, &.group_post.current
+        background-image: url("/images/icons/discuss-icon.png")
 
     
